# CameraStreamingDemo

./: CMakeLists.txt  run.sh
Client/: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  socketClient.cpp  socketClient.h  videoWidget.cpp  videoWidget.h
Server/: CMakeLists.txt  config.h  main.c  main.cpp  serv.cpp  serv.h  server.c  server.h  v4l2.c  v4l2.h
messages/: CMakeLists.txt
messages/src/: example.proto
